Spaghetti code baseline functionality :-)
Bot now scrapes mastodon for Walt Ruff posts, does some regexp operations to get the plaintext in a workable format, and posts them on bluesky. Code style is horrendous, but it seems to work on a base level if you squint?

--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   },
   "dependencies": {
     "@atproto/api": "^0.2.11",
+    "node-html-parser": "^6.1.10",
+    "tsl-mastodon-api": "^0.4.1",
     "zod": "^3.21.4"
   }
 }
