--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -3,7 +3,7 @@ name: "Post to Bluesky"
 on: workflow_dispatch
 # on:
 #   schedule:
-#     - cron: "37 1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24 * * *"
+#     - cron: "*/5 * * * *"
 
 jobs:
   build:
