the cron was commented out.......
I have a computer science degree!

--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -1,9 +1,9 @@
 name: "Post to Bluesky"
 
-on: workflow_dispatch
-# on:
-#   schedule:
-#     - cron: "*/5 * * * *"
+#on: workflow_dispatch
+on:
+schedule:
+- cron: "*/5 * * * *"
 
 jobs:
   build:
