--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -1,5 +1,6 @@
-name: "Post to Bluesky"
-on: schedule: - cron: "*/5 * * * *"
+on:
+  schedule:
+    - cron: "*/5 * * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
