--- a/.github/workflows/post.yml
+++ b/.github/workflows/post.yml
@@ -1,7 +1,7 @@
 name: "Post to Bluesky"
 on:
-  #schedule:
-    #- cron: "*/5 * * * *"
+  schedule:
+    - cron: "*/5 * * * *"
 jobs:
   build:
     runs-on: ubuntu-latest
